--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node": "10.12.24",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
+    "bulma": "^0.7.4",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.3",
