--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@types/googlemaps": "^3.30.16",
     "@types/jest": "24.0.0",
     "@types/node": "10.12.24",
+    "@types/qs": "^6.5.1",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
     "bulma": "^0.7.4",
+    "qs": "^6.6.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.3",
