--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@types/node": "10.12.24",
     "@types/qs": "^6.5.1",
     "@types/react": "16.8.2",
+    "@types/react-autocomplete": "^1.8.4",
     "@types/react-dom": "16.8.0",
     "bulma": "^0.7.4",
     "qs": "^6.6.0",
     "react": "^16.8.1",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.3",
     "typescript": "3.3.3"
