--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@types/react": "16.8.2",
     "@types/react-autocomplete": "^1.8.4",
     "@types/react-dom": "16.8.0",
+    "@types/react-motion": "^0.0.28",
+    "@types/react-simple-maps": "^0.12.1",
     "bulma": "^0.7.4",
     "qs": "^6.6.0",
     "react": "^16.8.1",
     "react-autocomplete": "^1.8.1",
     "react-dom": "^16.8.1",
+    "react-motion": "^0.5.2",
     "react-scripts": "2.1.3",
+    "react-simple-maps": "^0.12.1",
     "typescript": "3.3.3"
   },
   "scripts": {
