--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/d3-geo": "^1.11.1",
     "@types/googlemaps": "^3.30.16",
     "@types/jest": "24.0.0",
     "@types/node": "10.12.24",
@@ -13,6 +14,8 @@
     "@types/react-motion": "^0.0.28",
     "@types/react-simple-maps": "^0.12.1",
     "bulma": "^0.7.4",
+    "d3-geo": "^1.11.3",
+    "d3-geo-projection": "^2.6.0",
     "qs": "^6.6.0",
     "react": "^16.8.1",
     "react-autocomplete": "^1.8.1",
