--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "16.8.0",
     "@types/react-motion": "^0.0.28",
     "@types/react-simple-maps": "^0.12.1",
+    "@types/react-tooltip": "^3.9.1",
     "bulma": "^0.7.4",
     "d3-geo": "^1.11.3",
     "d3-geo-projection": "^2.6.0",
@@ -23,6 +24,7 @@
     "react-motion": "^0.5.2",
     "react-scripts": "2.1.3",
     "react-simple-maps": "^0.12.1",
+    "react-tooltip": "^3.9.2",
     "typescript": "3.3.3"
   },
   "scripts": {
