--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "16.8.2",
     "@types/react-autocomplete": "^1.8.4",
     "@types/react-dom": "16.8.0",
+    "@types/react-inlinesvg": "^0.8.0",
     "@types/react-motion": "^0.0.28",
     "@types/react-simple-maps": "^0.12.1",
     "@types/react-tooltip": "^3.9.1",
@@ -21,6 +22,7 @@
     "react": "^16.8.1",
     "react-autocomplete": "^1.8.1",
     "react-dom": "^16.8.1",
+    "react-inlinesvg": "^0.8.4",
     "react-motion": "^0.5.2",
     "react-scripts": "2.1.3",
     "react-simple-maps": "^0.12.1",
